frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptodash
  namespace: crypto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cryptodash
  template:
    metadata:
      labels:
        app: cryptodash
    spec:
      containers:
        - name: cryptodash
          image: ghcr.io/cl-krma/cryptodash-app:857e97e4a200f96c8e190d3d1d85e4a27d0efea9

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cryptodash-service
  namespace: crypto
spec:
  selector:
    app: cryptodash
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
