ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  namespace: crypto
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: crypto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cryptodash-service
                port:
                  number: 80
